<resources>
    <string name="app_name">League of Ireland</string>
    <string name="action_settings">Settings</string>
    <string name="menuTables">Tables</string>
    <string name="menuCup">Cup</string>
    <string name="menuStats">Stats</string>
    <string name="menuReport">Report</string>
    <string name="tableTitle">Airtrcity Premier Division</string>
    <string name="statsTitle">Top Goalscorers</string>
    <string name="donateTitle">Donate to a club</string>
    <string name="donateButton">Donate</string>
    <string name="donateSubtitle">Please Give to help support a club</string>
    <string name="donatePaypal">Paypal</string>
    <string name="donateDebit">Debit Card</string>
    <string name="reportTitle">Report</string>
    <string name="registerTitle">Register</string>
    <string name="registerEmail">Email Address</string>
    <string name="registerPassword">Password</string>
    <string name="registerUsername">Username</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Login</string>
    <string name="loginTitle">Login</string>
    <string name="welcomeMessage1">Stay updated on everything about the League of Ireland</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="donateTotal">Total</string>
    <string name="donateClubs">Teams</string>


    <string name="donateAmount">Amount</string>
    <string name="donateTeams">Pick a team</string>
    <string name="crestOne">Dundalk</string>
    <string name="crestTwo">Cork</string>
    <string name="crestThree">Shamrock</string>
    <string name="crestFour">Waterford</string>
    <string name="crestFive">Bohemian</string>
    <string name="crestSix">St.Pats</string>
    <string name="crsetSeven">Derry</string>
    <string name="crestEight">Sligo</string>
    <string name="crestNine">Limerick</string>
    <string name="crestTen">Bray</string>

    <string-array name="clubs">
        <item>Dundalk</item>
        <item>Cork City</item>
        <item>Bray Wanderers</item>
        <item> Shamrock Rovers</item>
        <item> Waterford FC</item>
        <item>Bohemian FC</item>
        <item> Derry City</item>
        <item>Sligo Rovers</item>
        <item>Limerick</item>
    </string-array>

</resources>
