<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ie.wit.leagueofireland.LeagueofIreland">


    <item
        android:id="@+id/menuHome"
        android:orderInCategory="100"
        android:title="Home"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuTables"
        android:orderInCategory="100"
        android:title="@string/menuTables"
        app:showAsAction="never" />


    <item
        android:id="@+id/menuStats"
        android:orderInCategory="100"
        android:title="@string/menuStats"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuDonate"
        android:orderInCategory="100"
        android:title="Donate"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menuReport"
        android:orderInCategory="100"
        android:title="@string/menuReport"
        app:showAsAction="never"
       />

    <item
        android:id="@+id/menuRegister"
        android:orderInCategory="100"
        android:title="Register"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuLogin"
        android:orderInCategory="100"
        android:title="Login"
        app:showAsAction="never"/>



</menu>
