<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="donateButtonPressed">

    <Button
        android:id="@+id/donateButton"
        android:layout_width="72dp"
        android:layout_height="29dp"
        android:onClick="donateButtonPressed"
        android:text="@string/donateButton"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <TextView
        android:id="@+id/donateTitle"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:text="@string/donateTitle"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/donateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/donateSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donateSubtitle"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/donateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donateTitle"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/paymentMethod"
        android:layout_width="181dp"
        android:layout_height="128dp"
        android:layout_above="@+id/progressBar"
        android:layout_below="@+id/donateSubtitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toStartOf="@+id/paymentAmount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/donateTitle"
        app:layout_constraintVertical_bias="0.276">

        <RadioButton
            android:id="@+id/Paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donatePaypal"
            app:layout_constraintBottom_toTopOf="@+id/donateButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paymentMethod"
            app:layout_constraintVertical_bias="0.0" />

        <RadioButton
            android:id="@+id/Debit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donateDebit"
            app:layout_constraintBottom_toTopOf="@+id/donateButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donateSubtitle"
            app:layout_constraintVertical_bias="0.527" />

    </RadioGroup>

    <NumberPicker
        android:id="@+id/amountPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/donateSubtitle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/donateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentMethod"
        app:layout_constraintVertical_bias="0.783" />

    <TextView
        android:id="@+id/totalSoFar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donateTotal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donateButton" />

    <EditText
        android:id="@+id/paymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/donateAmount"
        app:layout_constraintBottom_toTopOf="@+id/totalSoFar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/donateButton"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Spinner
        android:id="@+id/spin"
        android:layout_width="122dp"
        android:layout_height="25dp"
        android:entries="@array/clubs"
        app:layout_constraintBottom_toTopOf="@+id/paymentMethod"
        app:layout_constraintEnd_toStartOf="@+id/paymentMethod"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toEndOf="@+id/paymentMethod"
        app:layout_constraintTop_toBottomOf="@+id/paymentMethod"
        app:layout_constraintVertical_bias="0.287">

    </Spinner>

    <TextView
        android:id="@+id/teamSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donateTeams"
        app:layout_constraintBottom_toTopOf="@+id/spin"
        app:layout_constraintEnd_toStartOf="@+id/paymentMethod"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentMethod"
        app:layout_constraintVertical_bias="0.637" />

</android.support.constraint.ConstraintLayout>